<resources>
    <string name="app_name">Lindungi Peduli</string>
    <string name="title_activity_main_menu_container">MainMenuContainer</string>

    <string name="menu_home">Home</string>
    <string name="sudah_vaksin">Sudah Vaksin ?</string>
    <string name="prixa">Perkuat rasa kepedulian kita antar sesama
    dengan vaksin untuk mencapai herd immunity</string>
    <string name="terinfeksi">Terinfeksi</string>
    <string name="content_desc">content_des</string>
    <string name="update_covid">Update Covid</string>
    <string name="meninggal">Meninggal</string>
    <string name="sembuh">Sembuh</string>
    <string name="_3_langkah_pencegahan">3 Langkah Pencegahan</string>
    <string name="title_detail_berita">Detail Berita</string>
    <string name="ditulis_oleh">\"Ditulis Oleh \"</string>
    <string name="peduly_lindungy">Peduly Lindungy</string>
    <string name="aplikasi_informasi_covid_19_indonesia_raya">Aplikasi Informasi Covid 19 Indonesia Raya</string>
    <string name="not_yet_bookmark">Belum ditambahkan ke bookmark anda</string>
    <string name="already_added">Telah ada di bookmark anda</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="cuci_tangan">Cuci Tangan</string>
    <string name="pakai_masker">Pakai Masker</string>
    <string name="jaga_jarak">Jaga Jarak</string>
    <string name="lihat_item_tersimpan_disini">Lihat Item Berita Yang Kamu Simpan/Bookmark Disini</string>
    <string name="loading___">LOADING...</string>
    <string name="tanggal">Tanggal :</string>
    <string name="belum_ditambahkan_ke_bookmark_anda">Belum Ditambahkan ke Bookmark Anda</string>
</resources>