<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/iv_main_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ranu_kumbolo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jaldi_bold"
            android:textColor="@color/color_blue_mine"
            android:textSize="25sp"
            tool:text="Keindahan Ranu Kumbolo" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/jaldi_regular"
            android:textColor="@color/color_blue_mine"
            android:textSize="16sp"
            tool:text="Ditulis Oleh : Razky Febriansyah" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/jaldi_regular"
            android:text="@string/tanggal"
            android:textColor="@color/color_blue_mine"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/container_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="25dp">

                <ImageButton
                    android:id="@+id/btn_bookmark"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_bookmark" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/label_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/container_bookmark"
                android:text="@string/belum_ditambahkan_ke_bookmark_anda" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_blue_mine" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jaldi_regular"
            android:textColor="@color/color_blue_mine"
            android:textSize="14sp" />

    </LinearLayout>


</ScrollView>