<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FDFB">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_sawit_card_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/btnOpenAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/xd_prixa" />

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:width="200dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sudah_vaksin"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt1"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:width="200dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/prixa"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_news" />

            <androidx.cardview.widget.CardView
                android:id="@+id/containerCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/philosopher_b"
                        android:text="@string/update_covid"
                        android:textColor="@color/color_blue_mine"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:contentDescription="@string/content_desc"
                                android:src="@drawable/ic_circle_indicator_orange" />

                            <TextView
                                android:id="@+id/infected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:textColor="@color/xdOrange"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/terinfeksi"
                                android:textColor="@color/colorTextSecondary"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/infected_new"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/xdOrange"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:contentDescription="@string/content_desc"
                                android:src="@drawable/ic_circle_indicator_red" />

                            <TextView
                                android:id="@+id/death"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/xdRed"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/meninggal"
                                android:textColor="@color/colorTextSecondary"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/death_new"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/xdRed"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:contentDescription="@string/content_desc"
                                android:src="@drawable/ic_circle_indicator_green" />

                            <TextView
                                android:id="@+id/recovered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/xdGreenMain"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/sembuh"
                                android:textColor="@color/colorTextSecondary"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/recovered_new"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/xdGreenMain"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_prevent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/philosopher_b"
                    android:text="@string/_3_langkah_pencegahan"
                    android:textColor="@color/color_blue_mine"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_prevent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_marginRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_prevent1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:src="@drawable/xd_prevent1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_prevent1"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Cuci Tangan"
                            android:textColor="@color/xdGreenMain" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_prevent2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:src="@drawable/xd_prevent2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_prevent2"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Pakai Masker"
                            android:textColor="@color/xdGreenMain" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/img_prevent3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerInParent="true"
                            android:src="@drawable/xd_prevent3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_prevent3"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Jaga Jarak"
                            android:textColor="@color/xdGreenMain" />

                    </RelativeLayout>

                </LinearLayout>


            </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <include
        android:id="@+id/include_loading"
        android:visibility="gone"
        layout="@layout/layout_loading_screen"/>


</RelativeLayout>